--- a/index.ipynb
+++ b/index.ipynb
@@ -33,15 +33,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pytest in c:\\users\\medio\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (4.0.0)\n",
-      "Requirement already satisfied: py>=1.5.0 in c:\\users\\medio\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from pytest) (1.7.0)\n",
-      "Requirement already satisfied: six>=1.10.0 in c:\\users\\medio\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from pytest) (1.11.0)\n",
-      "Requirement already satisfied: setuptools in c:\\users\\medio\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from pytest) (40.6.2)\n",
-      "Requirement already satisfied: attrs>=17.4.0 in c:\\users\\medio\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from pytest) (18.2.0)\n",
-      "Requirement already satisfied: more-itertools>=4.0.0 in c:\\users\\medio\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from pytest) (4.3.0)\n",
-      "Requirement already satisfied: atomicwrites>=1.0 in c:\\users\\medio\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from pytest) (1.2.1)\n",
-      "Requirement already satisfied: pluggy>=0.7 in c:\\users\\medio\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from pytest) (0.8.0)\n",
-      "Requirement already satisfied: colorama in c:\\users\\medio\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from pytest) (0.4.0)\n"
+      "Requirement already satisfied: pytest in /opt/conda/envs/learn-env/lib/python3.6/site-packages (3.7.0)\n",
+      "Requirement already satisfied: six>=1.10.0 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from pytest) (1.12.0)\n",
+      "Requirement already satisfied: more-itertools>=4.0.0 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from pytest) (7.2.0)\n",
+      "Requirement already satisfied: py>=1.5.0 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from pytest) (1.8.0)\n",
+      "Requirement already satisfied: pluggy>=0.7 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from pytest) (0.13.0)\n",
+      "Requirement already satisfied: atomicwrites>=1.0 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from pytest) (1.3.0)\n",
+      "Requirement already satisfied: attrs>=17.4.0 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from pytest) (19.3.0)\n",
+      "Requirement already satisfied: setuptools in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from pytest) (41.4.0)\n",
+      "Requirement already satisfied: importlib-metadata>=0.12; python_version < \"3.8\" in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from pluggy>=0.7->pytest) (0.23)\n",
+      "Requirement already satisfied: zipp>=0.5 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from importlib-metadata>=0.12; python_version < \"3.8\"->pluggy>=0.7->pytest) (0.6.0)\n"
      ]
     }
    ],
