Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -61,11 +61,12 @@
      "text": [
       "Collecting ipytest\n",
       "  Downloading https://files.pythonhosted.org/packages/8d/3e/95fac18d9e4df6dcad1f1a8a12e8af6ad7e634845f852545b85fa0019e9a/ipytest-0.7.1-py3-none-any.whl\n",
-      "Requirement already satisfied: packaging in c:\\users\\medio\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from ipytest) (18.0)\n",
-      "Requirement already satisfied: pyparsing>=2.0.2 in c:\\users\\medio\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from packaging->ipytest) (2.3.0)\n",
-      "Requirement already satisfied: six in c:\\users\\medio\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from packaging->ipytest) (1.11.0)\n",
-      "Installing collected packages: ipytest\n",
-      "Successfully installed ipytest-0.7.1\n"
+      "Collecting packaging (from ipytest)\n",
+      "  Downloading https://files.pythonhosted.org/packages/cf/94/9672c2d4b126e74c4496c6b3c58a8b51d6419267be9e70660ba23374c875/packaging-19.2-py2.py3-none-any.whl\n",
+      "Requirement already satisfied: pyparsing>=2.0.2 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from packaging->ipytest) (2.4.2)\n",
+      "Requirement already satisfied: six in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from packaging->ipytest) (1.12.0)\n",
+      "Installing collected packages: packaging, ipytest\n",
+      "Successfully installed ipytest-0.7.1 packaging-19.2\n"
      ]
     }
    ],
