Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -136,46 +136,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "============================= test session starts =============================\n",
-      "platform win32 -- Python 3.6.7, pytest-4.0.0, py-1.7.0, pluggy-0.8.0\n",
-      "rootdir: C:\\Users\\medio\\Desktop\\chevron-tdd\\dsc-enterprise-pytest-codealong, inifile:\n",
-      "plugins: remotedata-0.3.1, openfiles-0.3.0, faulthandler-1.5.0, doctestplus-0.2.0, arraydiff-0.2\n",
+      "============================= test session starts ==============================\n",
+      "platform linux -- Python 3.6.9, pytest-3.7.0, py-1.8.0, pluggy-0.13.0\n",
+      "rootdir: /home/merry-bolt-9130/dsc-enterprise-chevron-pytest-codealong-chevron-dataeng-100419, inifile:\n",
       "collected 1 item\n",
       "\n",
       "index.py F                                                               [100%]\n",
       "\n",
-      "================================== FAILURES ===================================\n",
-      "____________________________ test_add_two_numbers _____________________________\n",
+      "=================================== FAILURES ===================================\n",
+      "_____________________________ test_add_two_numbers _____________________________\n",
       "\n",
       "    def test_add_two_numbers():\n",
-      "        answer = 4 + 3\n",
-      "        func_output = add_two_numbers(4, 3)\n",
-      ">       assert answer == func_output\n",
+      "        answer = 4 + 3                                 # Step 1\n",
+      "        func_output = add_two_numbers(4, 3)            # Step 2\n",
+      ">       assert answer == func_output                   # Step 3\n",
       "E       assert 7 == None\n",
       "\n",
-      "<ipython-input-10-5330014502fb>:7: AssertionError\n",
-      "============================== warnings summary ===============================\n",
-      "C:\\Users\\medio\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\_pytest\\assertion\\rewrite.py:272\n",
-      "  C:\\Users\\medio\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\_pytest\\assertion\\rewrite.py:272: PytestWarning: Module already imported so cannot be rewritten: pytest_remotedata\n",
-      "    self.config,\n",
-      "  C:\\Users\\medio\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\_pytest\\assertion\\rewrite.py:272: PytestWarning: Module already imported so cannot be rewritten: pytest_openfiles\n",
-      "    self.config,\n",
-      "  C:\\Users\\medio\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\_pytest\\assertion\\rewrite.py:272: PytestWarning: Module already imported so cannot be rewritten: pytest_faulthandler\n",
-      "    self.config,\n",
-      "  C:\\Users\\medio\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\_pytest\\assertion\\rewrite.py:272: PytestWarning: Module already imported so cannot be rewritten: pytest_doctestplus\n",
-      "    self.config,\n",
-      "  C:\\Users\\medio\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\_pytest\\assertion\\rewrite.py:272: PytestWarning: Module already imported so cannot be rewritten: pytest_arraydiff\n",
-      "    self.config,\n",
-      "\n",
-      "-- Docs: https://docs.pytest.org/en/latest/warnings.html\n",
-      "==================== 1 failed, 5 warnings in 0.14 seconds =====================\n"
+      "<ipython-input-4-3634531a3e18>:7: AssertionError\n",
+      "=========================== 1 failed in 0.47 seconds ===========================\n"
      ]
     }
    ],
